# leavitt

./: .gitignore  NOTICE.md  PROGRESS.md  README.md  pyproject.toml
bench/: baseline_agent.py  common.py  kimi_step.py  malformed_grafana.py  runner.py
bench/aiopslab/: README.md  baseline_run.py  leavitt_agent.py
demo/: banner.py  chaos-card.html  design_prompt.md  devpost_submission.md  discord-card.html  icon.html  incident.sh  leavitt-video.srt  loadmon.py  oncall.py  results_table.md  results_table_qwen7b.md  show_enforcement.py  slides.md  thumbnail.html  video-cover.html  video_script.md  winner-banner.html
demo/cassettes/: agent.tape  banner.tape  console.tape  dashboard.tape  enforcement.tape  hermes-nemotron.tape  investigate.tape  loadmon.tape  oncall.tape  ops-console.tape  video-run.tape
deploy/: Makefile  README.md  docker-compose.mcp.yml  flagctx_server.py  integrations.md  oncall.sh  setup_demo.sh
deploy/hermes/: README.md  SOUL.md  leavitt-profile.config.yaml  patch-tool-display.py
deploy/hermes/skins/: leavitt.yaml
deploy/k6/: loadtest.js
deploy/otel-demo-overlay/: compose.leavitt-k6.yaml  compose.leavitt-loki.yaml
deploy/otel-demo-overlay/grafana-datasources/: loki.yaml
deploy/otel-demo-overlay/otel-collector/: otelcol-config-extras.yml
examples/: scenarios.yaml
src/leavitt/: actions.py  app.py  chaos_handler.py  cli.py  dashboard.py  loadview.py  report.py  reports.py  sessions.py  tui.py
tests/: fake_grafana_mcp.py  integration_upstream.py  live_demo.py  live_quickpizza.py  smoke_test.py
