[project]
name = "leavitt"
version = "0.1.0"
description = "Read-only observability synthesis agent on a Theodosia-enforced state machine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "burr>=0.40.2",
    "fastmcp>=3.3.1",
    "litellm>=1.86.0",
    "mcp>=1.27.1",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "theodosia>=0.1.0",
]

[project.scripts]
leavitt = "leavitt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/leavitt"]
